# stoneburner

./: .coverage  .env.example  .gitignore  .trufflehog.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.cursor/skills/stoneburner-inference-env/: SKILL.md
.cursor/skills/stoneburner-model-qa/: SKILL.md
.github/workflows/: ci.yml  eval-gate.yml  publish.yml
atomics/: __init__.py  __main__.py  advisor.py  capacity.py  cli.py  config.py  contention.py  doctor.py  exporters.py  hooks.py  inference.py  labcompare.py  model_classes.py  models.py  paths.py  profiles.py  qa_runner.py  regression.py  reporting.py  scenario.py  scenario_models.py  scenario_prompts.py  secrets.py  soak.py  stats.py  stress.py  sweep.py  tiers.py  validation.py  webhooks.py
atomics/api/: __init__.py  _runners.py  auth.py  config.py  jobs.py  models.py  routes.py  server.py
atomics/archreview/: keygen.py  models.py  pack.py  prompt.py  runner.py  scorer.py  taxonomy.py
atomics/auth/: __init__.py  apikey.py  codex.py  oauth.py  profiles.py  store.py
atomics/commands/: __init__.py  admin.py  api.py  auth.py  benchmark.py  codereview.py  common.py  distributed.py  eval.py  load.py  rag.py  refusal.py  security.py  worker.py
atomics/core/: __init__.py  engine.py  guard.py  runner.py
atomics/distributed/: __init__.py  auth.py  coordinator.py  models.py  routes.py  worker_client.py  worker_runner.py
atomics/eval/: __init__.py  attempt_serialization.py  calibration.py  fixtures.py  judge.py  multilingual.py  outcomes.py  provider_attempt.py  runner.py
atomics/probe/: __init__.py  checks.py  config.py  connectors.py  runner.py
atomics/providers/: __init__.py  base.py  bedrock.py  brain_gateway.py  claude.py  gemini.py  groq.py  llamacpp.py  ollama.py  openai.py  pricing.py  together.py  vllm.py
atomics/scheduler/: __init__.py  cron.py
atomics/storage/: __init__.py  records.py  repository.py  schema.py
atomics/tasks/: __init__.py  catalog.py  randomizer.py  topics.py
atomics/workers/: __init__.py  bridge.py
brain/: README.md  brain-status  brain-swap  brain-switch  brain-vllm
configs/: aggressive.toml  conservative.toml  default.toml
docs/: ADVERSARIAL_SUITES.md  API_SERVER.md  CLI_REFERENCE.md  COMPARING.md  FRONTIER_COMPARISON.md  INFERENCE_ENV.md  LEADERBOARD-REDBLUE.md  LEADERBOARD.md  LOAD_TESTING.md  SECURITY_SUITES.md  THINKING.md
profiles/: brainbox-vllm.yaml  vllm-gateway.yaml
profiles/examples/: README.md  ctf-ai-gate.yaml  http-flask-endpoint.yaml  ollama-with-system-prompt.yaml
qa/examples/: ai-gate-regression.yaml  app-gate-guardrails.yaml  ctf-solvability.yaml
scripts/: archreview_shootout.sh  variance_sweep.py  variance_sweep.sh
tests/: conftest.py  test_adversarial.py  test_adversarial_zerotrust.py  test_advisor.py  test_api_auth.py  test_api_cli_server.py  test_api_config.py  test_api_eval_dispatch.py  test_api_integration.py  test_api_jobs.py  test_api_models.py  test_api_reports.py  test_api_routes.py  test_api_runners.py  test_api_server.py  test_archreview_keygen.py  test_archreview_models.py  test_archreview_pack.py  test_archreview_prompt.py  test_archreview_repos_zt.py  test_archreview_runner.py  test_archreview_scorer.py  test_archreview_taxonomy.py  test_auth.py  test_calibration.py  test_capacity.py  test_cli.py  test_cli_adversarial_integrity.py  test_cli_archreview.py  test_cli_codereview.py  test_cli_refusal.py  test_codegen.py  test_codereview.py  test_codereview_scorer.py  test_commands_common.py  test_config.py  test_contention.py  test_distributed_api.py  test_distributed_auth.py  test_distributed_cli.py  (+65 more)
(+57 files in other folders)
