[project]
name = "atomics"
version = "0.1.0"
description = "Agentic token usage benchmarking platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "babywyrm" }]

dependencies = [
    "anthropic>=0.39.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
bedrock = ["boto3>=1.35.0"]
openai = ["openai>=1.40.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
atomics = "atomics.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: isolated tests without network or external services",
    "integration: tests that span multiple subsystems (still local)",
    "network: tests that hit real network or external APIs (opt-in)",
]
addopts = [
    "--cov=atomics",
    "--cov-report=term-missing",
    "--cov-fail-under=84",
]
