[project]
name = "atomics"
version = "0.12.0"
description = "Agentic token usage benchmarking platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "babywyrm" }]

dependencies = [
    "anthropic>=0.39.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.3",
    "rich>=13.0.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
bedrock = ["boto3>=1.35.0"]
openai = ["openai>=1.40.0"]
rag = [
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=3.0.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
atomics = "atomics.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# Tests use looser conventions by design: imports grouped near usage (E402),
# scaffolding locals that assert-by-construction (F841), and fixture-shaped
# local names (N806).
"tests/*" = ["E402", "F841", "E741", "N806", "N814"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# The whole package is type-checked — no per-module error suppressions remain.
# `ignore_missing_imports` stays on for optional/stub-less third-party deps.

[[tool.mypy.overrides]]
# Optional [rag] stack: installed numpy stubs use 3.12+ syntax that breaks under
# python_version = "3.11". Skip following those imports when the extra is present.
module = [
    "numpy",
    "numpy.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "sqlite_vec",
    "sqlite_vec.*",
    "torch",
    "torch.*",
]
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: isolated tests without network or external services",
    "integration: tests that span multiple subsystems (still local)",
    "network: tests that hit real network or external APIs (opt-in)",
]
addopts = [
    "--cov=atomics",
    "--cov-report=term-missing",
]

[tool.hatch.build.targets.sdist]
exclude = [".venv", "logs", "data", "1"]

[tool.hatch.build.targets.wheel]
packages = ["atomics"]
